--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.3.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vue-router": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
